<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logovipingresso"
        app:layout_constraintBottom_toTopOf="@+id/tf_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_nome"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageHome"
        app:helperText="@string/helper_required"
        tools:ignore="RtlCompat"
        app:startIconDrawable="@drawable/ic_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_senha"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tf_nome"
        app:passwordToggleEnabled="true"
        app:helperText="@string/helper_required"
        tools:ignore="RtlCompat"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tf_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgotPasswordLogin"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLogin" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        app:isDarkTheme="true"
        android:text="@string/google_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />
    <Button
        android:id="@+id/btLogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textStyle="bold"
        android:background="@drawable/button_default"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>